--- a/index.html
+++ b/index.html
@@ -3,12 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Testing Page</title>
+    <title>Your Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>This is an HTML Testing Page</h1>
-    <p>Welcome to the testing site!</p>
-    <script src="script.js"></script>
+    <header>
+        <h1>Your Website</h1>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#career">Career</a></li>
+            <li><a href="#papers">Papers</a></li>
+            <li><a href="#consumer-login">Consumer Login</a></li>
+            <li><a href="#consultant-login">Consultant Login</a></li>
+            <li><a href="#financer-login">Financer Login</a></li>
+            <li><a href="#more">More</a></li>
+        </ul>
+    </nav>
+
+    <section id="home">
+        <h2>Home Section</h2>
+        <!-- Content for the home section goes here -->
+    </section>
+
+    <section id="career">
+        <h2>Career Section</h2>
+        <!-- Content for the career section goes here -->
+    </section>
+
+    <section id="papers">
+        <h2>Papers Section</h2>
+        <!-- Content for the papers section goes here -->
+    </section>
+
+    <section id="consumer-login">
+        <h2>Consumer Login Section</h2>
+        <!-- Content for the consumer login section goes here -->
+    </section>
+
+    <section id="consultant-login">
+        <h2>Consultant Login Section</h2>
+        <!-- Content for the consultant login section goes here -->
+    </section>
+
+    <section id="financer-login">
+        <h2>Financer Login Section</h2>
+        <!-- Content for the financer login section goes here -->
+    </section>
+
+    <section id="more">
+        <h2>More Section</h2>
+        <!-- Content for the more section goes here -->
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Your Website. All rights reserved.</p>
+    </footer>
 </body>
 </html>
+
