--- a/index.html
+++ b/index.html
@@ -23,42 +23,17 @@
         </ul>
     </nav>
 
-    <section id="home">
-        <h2>Home Section</h2>
-        <!-- Content for the home section goes here -->
-    </section>
-
-    <section id="career">
-        <h2>Career Section</h2>
-        <!-- Content for the career section goes here -->
-    </section>
-
-    <section id="papers">
-        <h2>Papers Section</h2>
-        <!-- Content for the papers section goes here -->
-    </section>
-
-    <section id="consumer-login">
-        <h2>Consumer Login Section</h2>
-        <!-- Content for the consumer login section goes here -->
-    </section>
-
-    <section id="consultant-login">
-        <h2>Consultant Login Section</h2>
-        <!-- Content for the consultant login section goes here -->
-    </section>
-
-    <section id="financer-login">
-        <h2>Financer Login Section</h2>
-        <!-- Content for the financer login section goes here -->
-    </section>
-
-    <section id="more">
-        <h2>More Section</h2>
-        <!-- Content for the more section goes here -->
-    </section>
-
-    <footer>
+   <footer>
+        <nav id="tabsNav">
+            <ul>
+                <li><a href="#career">Career</a></li>
+                <li><a href="#papers">Papers</a></li>
+                <li><a href="#consumer-login">Consumer Login</a></li>
+                <li><a href="#consultant-login">Consultant Login</a></li>
+                <li><a href="#financer-login">Financer Login</a></li>
+                <li><a href="#more">More</a></li>
+            </ul>
+        </nav>
         <p>&copy; 2024 Your Website. All rights reserved.</p>
     </footer>
 </body>
