--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Website</h1>
+        <h1>Bihar Economic development society</h1>
     </header>
 
     <nav>
