--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
     <header>
         <h1>Bihar Economic development society</h1>
     </header>
+<section id="introSection">
+        <p>Empowering Bihar's economic growth through collaboration! We bring together startups, consultants, and financial experts to drive innovation and prosperity in the region.</p>
+        <p>Are you ready to be a part of Bihar's economic transformation?</p>
+        <button id="toggleBtn">Explore More</button>
+    </section>
 
+    <section id="detailsSection" class="hidden">
+        <p>Discover endless opportunities for startups, connect with experienced consultants, and secure financial backing for your ventures.</p>
+        <p>Let's build a vibrant and thriving economy together!</p>
+    </section>
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
